--- a/application/templates/activity_list.html
+++ b/application/templates/activity_list.html
@@ -1,14 +1,24 @@
 {% extends 'base.html' %}
   
 {% block header %}
-  <h1>{% block title %}Your most recent activities{% endblock %}</h1>
+  <h2>{% block title %}Your most recent Strava activities{% endblock %}</h2>
 {% endblock %}
 
 {% block content %}
   {% for act in resp_json %}
-    {# Provide a link to the activity detail dashboard, #}
-    {# which uses the id in the url to retrieve the activity data. #}
-    <a href="/dash-activity/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }})
+    <a href="/dash-activity/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }}) ({{ (act['distance'] / 1609.34) | round (1) }} mi, {{ (act.total_elevation_gain * 3.28084) | round(0) | int }} ft)
     <br>
   {% endfor %}
+  {% with p=request.args.get('page')|int or 1 %}
+    <nav aria-label="...">
+      <ul class="pagination">
+        {% if p==1 %}
+          <li class="page-item disabled"><a class="page-link" href="#"><span aria-hidden="true">&larr;</span>Newer</a></li>
+        {% else %}
+          <li class="page-item"><a class="page-link" href="/activities?page={{ p - 1 }}"><span aria-hidden="true">&larr;</span>Newer</a></li>
+        {% endif %}
+        <li class="page-item"><a class="page-link" href="/activities?page={{ p + 1 }}">Older<span aria-hidden="true">&rarr;</span></a></li>
+      </ul>
+    </nav>
+  {% endwith %}
 {% endblock %}
