--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Training Zealot</title>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 {#<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">#}
-<nav>
-  <h1>The Trail Zealot Training Analysis Platform</h1>
+<nav class="navbar navbar-light bg-light">
+  <a href='/' class="navbar-brand">The Training Zealot Analysis Platform</a>
+  <!-- <h1>The Training Zealot Analysis Platform</h1> -->
 </nav>
 <section class="content">
-  <header>
-    {% block header %}{% endblock %}
-  </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
-  {% block content %}{% endblock %}
+  <div class="container-fluid">
+    <header>
+      {% block header %}{% endblock %}
+    </header>
+    {% block content %}{% endblock %}
+  </div>
 </section>
