--- a/application/templates/activity_list.html
+++ b/application/templates/activity_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   {% for act in resp_json %}
-    <a href="/dash-activity/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }}) ({{ (act['distance'] / 1609.34) | round (1) }} mi, {{ (act.total_elevation_gain * 3.28084) | round(0) | int }} ft)
+    <a href="/dash/strava/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }}) ({{ (act['distance'] / 1609.34) | round (1) }} mi, {{ (act.total_elevation_gain * 3.28084) | round(0) | int }} ft)
     <br>
   {% endfor %}
   {% with p=request.args.get('page')|int or 1 %}
