Convert re-used components to all-in-one pattern

--- a/application/templates/landing_page.html
+++ b/application/templates/landing_page.html
@@ -9,7 +9,7 @@
   <br>
   <a href="/dash/log">Training log dashboard</a>
   <br>
-  {# <a href="/dash/upload">File Upload Dashboard (WIP)</a> #}
+  <a href="/dash/upload">Analyze an activity file (.gpx, .fit, .tcx, .csv)</a>
   {# <br> #}
   {# <a href="/view-saved-activities">List of saved activities</a> #}
 {% endblock %}
