Move strava api stuff to own blueprint - Restructure and add functional tests - Create subclass AuthenticatedUserFunctionalTest

--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -5,6 +5,7 @@
 <nav class="navbar navbar-light bg-light">
   <a href='/' class="navbar-brand">The Training Zealot Analysis Platform</a>
   <!-- <h1>The Training Zealot Analysis Platform</h1> -->
+  {% block navbar_right %}{% endblock navbar_right %}
 </nav>
 <section class="content">
   <div class="container-fluid">
