--- a/application/templates/landing_page.html
+++ b/application/templates/landing_page.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-  <a href="/activities">Strava activities</a>
+  <a href="/strava/activities">Strava activities</a>
   <br>
   <a href="/dash/log">Training log dashboard</a>
   <br>
