FT: Strava auth passing

--- a/application/templates/strava_api/callback.html
+++ b/application/templates/strava_api/callback.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'admin_base.html' %}
   
 {% block header %}
   <h2>{% block title %}Error accepting Strava permissions{% endblock %}</h2>
