--- a/application/templates/strava_api/activity_list.html
+++ b/application/templates/strava_api/activity_list.html
@@ -1,16 +1,12 @@
-{% extends 'base.html' %}
+{% extends 'admin_base.html' %}
   
 {% block header %}
   <h2>{% block title %}Your most recent Strava activities{% endblock %}</h2>
 {% endblock %}
 
-{% block navbar_right %}
-  <div>Logged in as {{athlete.firstname}} {{athlete.lastname}}</div><a id= "logout-strava" href="{{ url_for('strava_api.logout') }}">Logout</a>
-{% endblock navbar_right %}
-
 {% block content %}
   {% for act in resp_json %}
-    <a href="/dash/strava/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }}) ({{ (act['distance'] / 1609.34) | round (1) }} mi, {{ (act.total_elevation_gain * 3.28084) | round(0) | int }} ft)
+    <a href="/strava/{{ act['id'] }}">{{ act['name'] }}</a> ({{ act['start_date_local'] }}) ({{ (act['distance'] / 1609.34) | round (1) }} mi, {{ (act.total_elevation_gain * 3.28084) | round(0) | int }} ft)
     <br>
   {% endfor %}
   {% with p=request.args.get('page')|int or 1 %}
