--- a/application/templates/admin.html
+++ b/application/templates/admin.html
@@ -11,5 +11,7 @@
     <a href="/strava/authorize">Authorize with Strava</a>
   {% endif %}
   <br>
+  <a href="{{ url_for('strava_api.manage') }}">Manage Strava Connections</a>
+  <br>
   <a href="/upload">Analyze an activity file (.gpx, .fit, .tcx, .csv)</a>
 {% endblock %}
