--- a/application/templates/strava_api/manage.html
+++ b/application/templates/strava_api/manage.html
@@ -5,12 +5,59 @@
 {% endblock %}
 
 {% block content %}
-  {# for strava_account in current_user.strava_accounts #}
-  {% for strava_account in strava_accounts %}
-    <div>
-      <a href="{{strava_account.url}}">{{strava_account}}</a>
-      <a href="{{ url_for('strava_api.revoke') }}">Revoke access</a>
+  {% for message in get_flashed_messages() %}
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+      {{ message }}
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
   {% endfor %}
-  <div><a href="{{ url_for('strava_api.authorize') }}">Connect Another Strava Account</a></div>
+
+  <div class="row justify-content-center">
+    <a class="btn btn-primary mt-4" href="{{ url_for('strava_api.authorize') }}"><i class="fa-solid fa-plus"></i> Connect Another Strava Account</a>
+  </div>
+
+  {# for strava_account in current_user.strava_accounts #}
+  {% for strava_account in strava_accounts %}
+    <div class="row py-5 h-100 justify-content-center">
+      <div class="col col-md-9 col-lg-7 col-xl-5">
+        <div class="card" style="border-radius: 15px;">
+          <div class="card-body p-4">
+            <div class="d-flex text-black">
+              <div class="flex-shrink-0">
+                <a href="{{ strava_account.url }}">
+                  <img src="{{ strava_account.profile_picture_url }}"
+                    alt="Generic placeholder image" class="img-fluid"
+                    style="width: 180px; border-radius: 10px;">
+                </a>
+              </div>
+              <div class="flex-grow-1 ml-3">
+                <a href="{{strava_account.url}}">
+                  <h5 class="mb-1">{{ strava_account.firstname }} {{ strava_account.lastname }}</h5>
+                </a>
+                <p class="mb-2 pb-1" style="color: #2b2a2a;">Strava Account #{{ strava_account.strava_id }}</p>
+                <p class="mb-2 pb-1" style="color: #2b2a2a;">{{ strava_account.athlete.city }}, {{ strava_account.athlete.state }}, {{ strava_account.athlete.country }}</p>
+                <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
+                  style="background-color: #efefef;">
+                  <div>
+                    <p class="small text-muted mb-1">Runs</p>
+                    <p class="mb-0">{{ strava_account.run_count }}</p>
+                  </div>
+                  <div class="px-3">
+                    <p class="small text-muted mb-1">Followers</p>
+                    <p class="mb-0">{{ strava_account.follower_count }}</p>
+                  </div>
+                </div>
+                <div class="d-flex pt-1">
+                  <a href= "{{ url_for('strava_api.display_activity_list', id=strava_account.strava_id) }}"class="btn btn-primary mr-1 flex-grow-1">View Strava Activities</a>
+                  <a href="{{ url_for('strava_api.revoke', id=strava_account.strava_id) }}" class="btn btn-danger flex-grow-1">Revoke Access</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  {% endfor %}
 {% endblock content %}
