--- a/application/plotlydash/assets/style.css
+++ b/application/plotlydash/assets/style.css
@@ -66,7 +66,7 @@ i.fa-2 {
 
 @media (max-width: 576px) {
 
-  [data-dash-column="Time"], [data-dash-column="Distance"], [data-dash-column="Elevation"] {
+  [data-dash-column="Time"], [data-dash-column="Distance"], [data-dash-column="Elevation"], [data-dash-column='TSS'] {
     display: none;
   }
 }
