Structural overhaul and cleanup as I go

--- a/application/templates/admin_base.html
+++ b/application/templates/admin_base.html
@@ -5,6 +5,6 @@
     <a href="{{ url_for('strava_api.manage') }}" class="nav-link">Manage Strava Accounts</a>
   </div>
   <div class="nav-item">
-    <a href="{{ url_for('route_blueprint.logout') }}" class="nav-link">Log Out</a>
+    <a href="{{ url_for('main.logout') }}" class="nav-link">Log Out</a>
   </div>
 {% endblock nav_items %}
