Rename /upload -> /analyze-file

--- a/application/templates/main/admin.html
+++ b/application/templates/main/admin.html
@@ -7,5 +7,5 @@
 {% block content %}
   <a href="{{ url_for('strava_api.manage') }}">Manage Strava Connections</a>
   <br>
-  <a href="/upload">Analyze an activity file (.gpx, .fit, .tcx, .csv)</a>
+  <a href="/analyze-file">Analyze an activity file (.gpx, .fit, .tcx, .csv)</a>
 {% endblock %}
