--- a/application/templates/strava_api/callback.html
+++ b/application/templates/strava_api/callback.html
@@ -1,7 +1,7 @@
 {% extends 'admin_base.html' %}
   
 {% block header %}
-  <h2>{% block title %}Error accepting Strava permissions{% endblock %}</h2>
+  {% block title %}Error accepting Strava permissions{% endblock %}
 {% endblock %}
 
 {% block content %}
