--- a/application/plotlydash/assets/style.css
+++ b/application/plotlydash/assets/style.css
@@ -42,13 +42,13 @@
   i {padding-top: 0px;}
 }
 
-i {
+.accordion-body i {
   text-align: center;
   width: min-content;
   padding: 10px 10px 10px 10px;
 }
 
-i.fa-2 {
+.accordion-body i.fa-2 {
   padding: 15px 0px 0px 5px; 
 }
 
@@ -69,4 +69,61 @@ i.fa-2 {
   [data-dash-column="Time"], [data-dash-column="Distance"], [data-dash-column="Elevation"], [data-dash-column='TSS'] {
     display: none;
   }
+}
+
+/* Settings for all nav-links (top navbar + admin sidebar) */
+
+.nav-link {
+  color: #333;
+}
+
+.active .nav-link /* .nav-link.active */ {
+  color: #007bff;
+}
+
+/* Admin sidebar stuff */
+
+.topbar {
+  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .1);
+}
+
+.sidebar {
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+}
+
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 56px);
+  padding-top: .5rem;
+  overflow-x: hidden;
+  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+}
+
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+  .sidebar-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+}
+
+/*
+.sidebar .nav-link i {
+  margin-right: 4px;
+  color: #999;
+}
+*/
+
+.sidebar .nav-link {
+  font-weight: 500;
+  /* color: #333; */
+}
+
+.sidebar .nav-link:hover {
+  color: inherit;
+}
+
+.sidebar .nav-link:hover .i,
+.sidebar .nav-link.active .i {
+  color: inherit;
 }
