--- a/application/templates/base.html
+++ b/application/templates/base.html
@@ -1,29 +1,42 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Training Zealot</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<link rel="icon" type="image/x-icon" href="{{ favicon_url | safe }}">
+{{ dash_css | safe }}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-{#<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">#}
-<nav class="navbar navbar-expand-xs navbar-light bg-light">
-  <div class="container">
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light topbar">
+  <div class="container-fluid">
     <a href="/" class="navbar-brand">Training Zealot Analysis Platform</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleContent" aria-controls="navbarToggleContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="navbar-collapse collapse" id="navbarSupportedContent">
-      <div class="mr-auto navbar-nav">
-        <div class="nav-item"><a href="/admin" class="nav-link">Admin</a></div>
-        {% block nav_items %}{% endblock nav_items %}
+    <div class="collapse navbar-collapse" id="navbarToggleContent">
+      <ul class="nav me-auto mt-2 mt-lg-0 flex-column flex-lg-row justify-content-end" style="width: 100%">
+        <li class="nav-item{% if request.path == '/' %} active{% endif %}">
+          <a class="nav-link" href="/">Training Log</a>
+        </li>
+        <li class="nav-item{% if request.path == '/stress' %} active{% endif %}">
+          <a class="nav-link" href="/stress">Training Stress</a>
+        </li>
+        <li class="nav-item{% if request.path == '/saved-list' %} active{% endif %}">
+          <a class="nav-link" href="/saved-list">All Activities</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/settings">Admin</a>
+        </li>
+      </ul>
+      <div class="my-2 my-lg-0">
+
       </div>
     </div>
+  </div>
 </nav>
+
 <section class="content">
-  <div class="container-fluid">
+  {% block content %}
     <header>
       {% block header %}{% endblock %}
     </header>
-    {% block content %}{% endblock %}
-  </div>
+  {% endblock content %}
 </section>
