--- a/application/templates/strava_api/manage.html
+++ b/application/templates/strava_api/manage.html
@@ -1,15 +1,14 @@
 {% extends 'admin_base.html' %}
   
 {% block header %}
-  <h2>{% block title %}Manage Connected Strava Accounts{% endblock %}</h2>
+  {% block title %}Manage Connected Strava Accounts{% endblock %}
 {% endblock %}
 
-{% block content %}
+{% block main %}
   {% for message in get_flashed_messages() %}
     <div class="alert alert-success alert-dismissible fade show" role="alert">
       {{ message }}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
+      <button type="button" class="btn-close col-6 col-md-4" data-bs-dismiss="alert" aria-label="Close">
       </button>
     </div>
   {% endfor %}
@@ -21,7 +20,7 @@
   {# for strava_account in current_user.strava_accounts #}
   {% for strava_account in strava_accounts %}
     <div class="row py-5 h-100 justify-content-center">
-      <div class="col col-md-9 col-lg-7 col-xl-5">
+      <div class="col col-xl-9">
         <div class="card" style="border-radius: 15px;">
           <div class="card-body p-4">
             <div class="d-flex text-black">
@@ -32,7 +31,7 @@
                     style="width: 180px; border-radius: 10px;">
                 </a>
               </div>
-              <div class="flex-grow-1 ml-3">
+              <div class="flex-grow-1 ms-3">
                 <a href="{{strava_account.url}}">
                   <h5 class="mb-1">{{ strava_account.firstname }} {{ strava_account.lastname }}</h5>
                 </a>
@@ -50,7 +49,7 @@
                   </div>
                 </div>
                 <div class="d-flex pt-1">
-                  <a href= "/strava/activities?id={{ strava_account.strava_id }}"class="btn btn-primary mr-1 flex-grow-1">View Strava Activities</a>
+                  <a href= "/strava/activities?id={{ strava_account.strava_id }}"class="btn btn-primary me-1 flex-grow-1">View Strava Activities</a>
                   <a href="{{ url_for('strava_api.revoke', id=strava_account.strava_id) }}" class="btn btn-danger flex-grow-1">Revoke Access</a>
                 </div>
               </div>
@@ -60,4 +59,4 @@
       </div>
     </div>
   {% endfor %}
-{% endblock content %}
+{% endblock main %}
