--- a/application/templates/main/settings.html
+++ b/application/templates/main/settings.html
@@ -4,4 +4,8 @@
   {% block title %}Profile Settings{% endblock %}
 {% endblock %}
 
-{% block main %}{% endblock main %}
+{% block main %}
+  {# Password: {{ user.password }} #}
+  Critical Pace (CP): {{ settings.cp_ms }}
+  Functional Threshold Pace (FTP): {{ settings.ftp_ms }}
+{% endblock main %}
