--- a/application/templates/admin_base.html
+++ b/application/templates/admin_base.html
@@ -1,11 +1,30 @@
 {% extends 'base.html' %}
 
 {% block nav_items %}
-  <div class="nav-item">
-    <a href="{{ url_for('strava_api.manage') }}" class="nav-link">Manage Strava Accounts</a>
-  </div>
-  <div class="nav-item">
-    <a href="{{ url_for('main.logout') }}" class="nav-link">Log Out</a>
+  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleContent" aria-controls="navbarToggleContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarToggleContent">
+    <ul class="nav me-auto mt-2 mt-lg-0 flex-column flex-lg-row justify-content-end" style="width: 100%">
+      <li class="nav-item{% if request.path == '/' %} active{% endif %}">
+        <a class="nav-link" href="/">Training Log</a>
+      </li>
+      <li class="nav-item{% if request.path == '/stress' %} active{% endif %}">
+        <a class="nav-link" href="/stress">Training Stress</a>
+      </li>
+      <li class="nav-item{% if request.path == '/saved-list' %} active{% endif %}">
+        <a class="nav-link" href="/saved-list">All Activities</a>
+      </li>
+      <li class="nav-item">
+        {% if current_user.is_authenticated %}
+          <a href="{{ url_for('main.logout') }}" class="nav-link">Log out</a>
+        {% else %}
+          <a class="nav-link" href="/settings">Log in</a>
+        {% endif %}
+      </li>
+    </ul>
+    <div class="my-2 my-lg-0">
+    </div>
   </div>
 {% endblock nav_items %}
 
@@ -16,14 +35,14 @@
       <nav class="col-md-3 d-none d-md-block navbar-light bg-light sidebar">
         <div class="sidebar-sticky">
           <ul class="nav flex-column">
-            <li class="nav-item {% if request.path == url_for('main.settings') %}active{% endif %}">
-              <a class="nav-link d-flex" href="{{ url_for('main.settings') }}">
+            <li class="nav-item {% if request.path == '/settings' %}active{% endif %}">
+              <a class="nav-link d-flex" href="/settings">
                 <div class="d-flex align-items-center me-2"><i class="fa-solid fa-gear"></i></div>
                 <div>Profile Settings <span class="sr-only">(current)</span></div>
               </a>
             </li>
-            <li class="nav-item {% if request.path == url_for('strava_api.manage') %}active{% endif %}">
-              <a class="nav-link d-flex" href="{{ url_for('strava_api.manage') }}">
+            <li class="nav-item {% if request.path == '/settings/strava' %}active{% endif %}">
+              <a class="nav-link d-flex" href="/settings/strava">
                 <div class="d-flex align-items-center me-2"><i class="fa-solid fa-circle-nodes"></i></div>
                 <div>Strava Account Connections</div>
               </a>
@@ -32,12 +51,6 @@
               <a class="nav-link d-flex" href="/analyze-file">
                 <div class="d-flex align-items-center me-2"><i class="fa-solid fa-microscope"></i></div>
                 <div>Analyze Activity File</div>
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link d-flex" href="/logout">
-                <div class="d-flex align-items-center me-2"><i class="fa-solid fa-right-from-bracket"></i></div>
-                <div>Log Out</div>
               </a>
             </li>
           </ul>
